RESOLVED FIXED239482
REGRESSION(r292863): std::remove_cvref_t not defined in GCC9<
https://bugs.webkit.org/show_bug.cgi?id=239482
Summary REGRESSION(r292863): std::remove_cvref_t not defined in GCC9<
Diego Pino
Reported 2022-04-18 23:14:56 PDT
REGRESSION(r292863): std::remove_cvref_t not defined in GCC9<
Attachments
Patch (1.53 KB, patch)
2022-04-18 23:18 PDT, Diego Pino
no flags
Patch (1.55 KB, patch)
2022-04-19 09:14 PDT, Diego Pino
no flags
Patch (1.55 KB, patch)
2022-04-20 19:39 PDT, Diego Pino
no flags
Diego Pino
Comment 1 2022-04-18 23:18:30 PDT
Nina Kolesa
Comment 2 2022-04-19 07:42:13 PDT
should probably make it conditional for `__GLIBCXX__` to avoid affecting libc++ environments (like mac)
Diego Pino
Comment 3 2022-04-19 09:14:43 PDT
Zan Dobersek
Comment 4 2022-04-19 23:25:18 PDT
Comment on attachment 457907 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=457907&action=review > Source/WTF/wtf/StdLibExtras.h:612 > +template <typename T> > +struct remove_cvref { > + using type = typename std::remove_cv<typename std::remove_reference<T>::type>::type; > +}; This has to be in the std namespace too.
Diego Pino
Comment 5 2022-04-20 19:39:32 PDT
EWS
Comment 6 2022-04-21 01:34:48 PDT
zan@falconsigh.net does not have committer permissions according to https://raw.githubusercontent.com/WebKit/WebKit/main/metadata/contributors.json. Rejecting attachment 458032 [details] from commit queue.
EWS
Comment 7 2022-04-21 01:38:31 PDT
EWS
Comment 8 2022-04-21 02:30:07 PDT
Committed r293148 (249844@main): <https://commits.webkit.org/249844@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458032 [details].
Ryan Haddad
Comment 9 2022-04-21 17:07:59 PDT
Note You need to log in before you can comment on or make changes to this bug.