REGRESSION(r292863): std::remove_cvref_t not defined in GCC9< https://bugs.webkit.org/show_bug.cgi?id=239482

Reviewed by Žan Doberšek.

std::remove_cvref_t is only available since GCC9 onwards:
  https://en.cppreference.com/w/cpp/compiler_support/20

* wtf/StdLibExtras.h: add remove_cvref_t to std namespace if not defined.

Canonical link: https://commits.webkit.org/249844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293148 268f45cc-cd09-0410-ab3c-d52691b4dbfc